# OptimizationMethods

./: README.md  functions.py  main.py  pyproject.toml
app/controllers/: basic_methods.py  multi_dimensional_methods.py  one_dimensional_methods.py
app/models/: functions_of_one_argument.py  multi_dimensional_functions.py  one_dimensional_functions.py
app/views/: multidimensional_examples.py  one_argument_examples.py  one_dimensional_examples.py  two_argument_examples.py
conf/: config.yaml
